@@ -1,3 +1,8 @@
+Wed May 16 11:25:30 GMT 2012  Olly Betts <olly@survex.com>
+
+	* letor.cc: Change the methods which just forward to Letor::Internal
+	  methods to explicitly tail call.
+
 Wed May 16 11:24:02 GMT 2012  Olly Betts <olly@survex.com>
 
 	* letor.cc: Don't use "using Xapian", but instead wrap the code in
